[package]
name = "ytdl-executor"
version = "0.1.0"
authors = ["Tom Havlik (thavlik@protonmail.com)"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
futures = "0.3"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = "1"
serde_json = "1.0"
thiserror = "1"    # Custom Error definitions and convenient error mappings
rust-s3 = { version = "0.32" }
aws-region = "0.25.1"
aws-creds = "0.30"