[package]
name = "ytdl-executor"
version = "0.1.0"
authors = ["Tom Havlik (thavlik@protonmail.com)"]
edition = "2018"

[dependencies]
ytdl-types = { path = "../types" }
ytdl-common = { path = "../common" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
tokio-util = { version = "0.7.7", features = ["compat"] }
kube = { version = "0.78.0", default-features = true, features = [
    "derive",
    "runtime",
] }
k8s-openapi = { version = "0.17", default-features = false, features = [
    "v1_22",
] }
futures = "0.3"
serde = "1"
serde_json = "1.0"
thiserror = "1"
rust-s3 = { version = "0.32" }
aws-region = "0.25.1"
aws-creds = "0.30"
clap = { version = "4.1.8", features = ["derive"] }
reqwest = "0.11"
image = "0.24.5"
scopeguard = "1.1.0"