[package]
name = "ytdl-operator"
version = "0.1.0"
authors = ["Tom Havlik (thavlik@protonmail.com)"]
edition = "2018"

[dependencies]
ytdl-types = { path = "../types" }
ytdl-common = { path = "../common" }
chrono = "0.4.23"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.78.0", default-features = true, features = [
    "derive",
    "runtime",
] }
k8s-openapi = { version = "0.17", default-features = false, features = [
    "v1_22",
] }
futures = "0.3"
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1"
rust-s3 = { version = "0.32" }
aws-region = "0.25.1"
aws-creds = "0.30"
const_format = "0.2.30"